home-assistant/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: home-assistant-buffering
  namespace: home-assistant
spec:
  buffering:
    maxRequestBodyBytes: 52428800  # 50Mi
