home-assistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  namespace: home-assistant
  labels:
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/version: "2026.10.0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: home-assistant
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: home-assistant
        app.kubernetes.io/version: "2026.10.0"
    spec:
      serviceAccountName: hass-service-account
      automountServiceAccountToken: false
      enableServiceLinks: false
      securityContext: {}
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: home-assistant-config
      containers:
        - name: home-assistant
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
              add:
                - NET_ADMIN
                - NET_RAW
          image: "ghcr.io/home-assistant/home-assistant:2026.10.0"
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /config
              name: config
          ports:
            - name: http
              containerPort: 8123
              protocol: TCP
          startupProbe:
            tcpSocket:
              port: 8123
            failureThreshold: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          livenessProbe:
            tcpSocket:
              port: 8123
            failureThreshold: 3
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 2
          readinessProbe:
            tcpSocket:
              port: 8123
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1Gi
